fix: image taking too much space in firefox
For a reason that I don't know, in firefox, when setting a percentage
height of an image in a grid layout, if width is auto, it'll occupy the same original
width of the image in the grid cell, although the "visual width" is no longer what it is
showing to fill the cell.

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -7,6 +7,7 @@
 }
 
 .c-card {
+  box-sizing: content-box;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: 100%;
@@ -19,7 +20,7 @@
   background-color: var(--bg-hl);
 
   &__image {
-    height: 100%;
+    height: inherit;
   }
 
   &__quote {
